from enum import Enum


class Move(Enum):
    LEFT = 'a'
    DOWN = 's'
    UP = 'w'
    RIGHT = 'd'
